# ForMula

./: .gitignore  AGENTS.md  CLAUDE.md  TASKS.md
backend/: auth.py  main.py  pyproject.toml
backend/ai/: auto_prompt.py  cache.py  dedup.py  embeddings.py  exa.py  judge.py  orchestrator.py  tavily.py
backend/db/: __init__.py  pool.py  repos.py
backend/db/supabase/: config.toml
backend/db/supabase/migrations/: 20260416000000_init.sql
backend/profiles/: quiz.py  routes.py
backend/prompts/: angle_generation.txt  generate_angles.txt  parse_profile.txt  research_query.txt  research_system_prompt.txt
backend/tmp/: research_response.json
src/backend/: .gitignore  main.py  pyproject.toml
src/backend/ai/: _persona.py  _timing.py  _xai.py
src/backend/ai/chat/: __init__.py  api.py  graph.py  log.py  prompt.py  state.py  tools.py
src/backend/ai/judge/: __init__.py  client.py  log.py  log.txt  models.py  prompt.py  schema.py  service.py  tournament.py
src/backend/ai/rerank/: api.py  graph.py  models.py
src/backend/auth/: jwt.py
src/backend/profiles/: api.py  models.py  repository.py
src/backend/profiles/data/: quiz.json
src/backend/prompts/: auto_prompt.txt  judge.txt
src/backend/scraper/: CLAUDE.md  LESSONS.md  __init__.py  __main__.py  db.py  models.py
src/backend/scraper/prompts/: __init__.py  extract.py  rerank_doc.py
src/backend/scraper/references/: FAILURE.md  INGREDIENT-TAGGING.md  LESSONS.md  RERANK-DOCS.md
src/backend/scraper/tools/: audit.py  budget.py  catalog.py  debug.py  descriptions.py  discovery.py  enrichment.py  filter.py  (+2 more)
(+113 files in other folders)
